--- a/app_admin/src/app/app.component.html
+++ b/app_admin/src/app/app.component.html
@@ -1,5 +1,10 @@
-<app-navbar></app-navbar>
-
-<div class="container">
-    <router-outlet></router-outlet>
-</div>
+<!-- <h1>{{ title }}</h1> -->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+     <a class="navbar-brand" href="#">{{ title }}</a>
+    </div>
+    </nav>
+    <div class="container">
+    <app-trip-listing></app-trip-listing>
+    </div>
+    
